--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -71,7 +71,7 @@
                 android:id="@+id/line1"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="15dp"
                 android:layout_marginTop="5dp"
                 android:background="@color/colorBlue"
                 android:layout_below="@id/user_name"/>
@@ -89,6 +89,7 @@
                 android:id="@+id/liner_info1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal"
                 android:layout_alignParentStart="true"
                 android:layout_below="@id/img_edit_profile">
