add video compression and upload progress

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
+    android:background="@drawable/chat_wallpaper"
     tools:context=".ui.ChatActivity">
 
     <TextView
@@ -27,19 +27,31 @@
         tools:listitem="@layout/rv_item_message"
         android:layout_height="wrap_content"/>
 
+
+    <ProgressBar
+        android:id="@+id/upload_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:progress="0"
+        android:background="@color/colorGray2"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/input_layout"
+        />
+
     <LinearLayout
         android:id="@+id/input_layout"
         android:background="@color/colorGray2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
         android:gravity="center"
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_marginStart="5dp"
             android:background="@color/transparent"
             android:src="@drawable/ic_video_blue"
@@ -47,8 +59,8 @@
             android:clickable="true"
             android:onClick="sendVideo" />
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_marginStart="5dp"
             android:background="@color/transparent"
             android:src="@drawable/ic_image_blue"
@@ -70,8 +82,8 @@
             />
         <ImageView
             android:id="@+id/send_msg_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="5dp"
             android:background="@drawable/send_icons"
@@ -81,13 +93,14 @@
             android:onClick="sendMessage" />
     </LinearLayout>
 
+
     <ProgressBar
         android:id="@+id/chat_progress"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:indeterminateDrawable="@drawable/custom_progress_bar_red"
+        android:indeterminateDrawable="@drawable/custom_progress_bar_blue"
         android:visibility="visible" />
 
 </RelativeLayout>
