--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="colorRed">#DC0846</color>
     <color name="colorRedDark">#A52F52</color>
     <color name="colorBlue">#4285f4</color>
+    <color name="colorBlue2">#2063f4</color>
     <color name="transparent_blue">#604285f4</color>
     <color name="transparent_blue2">#C04285f4</color>
     <color name="colorBlueLight">#16C3DB</color>
