--- a/app/src/main/res/layout/rv_item_message.xml
+++ b/app/src/main/res/layout/rv_item_message.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:padding="5dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -21,7 +21,7 @@
             android:layout_gravity="center"
             app:cardCornerRadius="4dp"
             app:cardElevation="0dp"
-            app:cardBackgroundColor="@color/colorBlue">
+            app:cardBackgroundColor="@color/colorBlue2">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
