--- a/app/src/main/res/layout/filter_users_dialog.xml
+++ b/app/src/main/res/layout/filter_users_dialog.xml
@@ -34,8 +34,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Gender"
+                android:paddingLeft="10dp"
                 android:textSize="22sp"
-                android:buttonTint="@color/colorGray2"
+                style="@style/CustomCheckbox02"
                 android:textColor="@color/colorWhite"/>
             <CheckBox
                 android:layout_marginTop="3dp"
@@ -43,8 +44,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Country"
+                android:paddingLeft="10dp"
+
                 android:textSize="22sp"
-                android:buttonTint="@color/colorGray2"
+                style="@style/CustomCheckbox02"
                 android:textColor="@color/colorWhite"/>
             <CheckBox
                 android:layout_marginTop="3dp"
@@ -52,8 +55,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Round Age"
+                android:paddingLeft="10dp"
+
                 android:textSize="22sp"
-                android:buttonTint="@color/colorGray2"
+                style="@style/CustomCheckbox02"
                 android:textColor="@color/colorWhite"/>
             <CheckBox
                 android:layout_marginTop="3dp"
@@ -61,8 +66,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Interests"
+                android:paddingLeft="10dp"
+
                 android:textSize="22sp"
-                android:buttonTint="@color/colorGray2"
+                style="@style/CustomCheckbox02"
                 android:textColor="@color/colorWhite"/>
         </LinearLayout>
 
