--- a/app/src/main/res/layout/filter_users_dialog.xml
+++ b/app/src/main/res/layout/filter_users_dialog.xml
@@ -6,11 +6,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     app:cardElevation="0dp"
-    app:cardBackgroundColor="@color/colorBlue">
+    app:cardBackgroundColor="@color/transparent_blue2">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorBlue"
+        android:background="@color/transparent_blue2"
         >
         <TextView
             android:layout_margin="5dp"
