--- a/app/src/main/res/layout/filter_users_dialog.xml
+++ b/app/src/main/res/layout/filter_users_dialog.xml
@@ -10,8 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/transparent_blue2"
-        >
+        android:background="@color/transparent_blue2">
         <TextView
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
