--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -136,6 +136,9 @@
         android:layout_marginTop="8dp"
         android:textSize="15sp"
         android:onClick="openLogin"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         />
 
         </RelativeLayout>
