--- a/app/src/main/res/layout/custom_toolbar_chat.xml
+++ b/app/src/main/res/layout/custom_toolbar_chat.xml
@@ -10,15 +10,33 @@
     android:gravity="start"
     android:background="@color/colorPrimary">
         <RelativeLayout
-            android:layout_margin="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/arrow_back"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="15dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:src="@drawable/ic_arrow_back_white" />
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/guest_img"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:scaleType="centerCrop"
+                android:layout_toEndOf="@id/arrow_back"
                 android:src="@drawable/ic_user_placeholder" />
             <TextView
                 android:id="@+id/guest_name"
@@ -29,9 +47,17 @@
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@id/guest_img"
                 android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
                 android:text=""
                 android:textColor="@color/colorWhite" />
+            <TextView
+                android:id="@+id/user_status"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_alignParentEnd="true"
+                android:text=""
+                android:background="@drawable/status_background"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="5dp"/>
         </RelativeLayout>
 
 </androidx.appcompat.widget.Toolbar>
