--- a/app/src/main/res/layout/edit_profile_form.xml
+++ b/app/src/main/res/layout/edit_profile_form.xml
@@ -160,6 +160,9 @@
                     android:layout_marginStart="10dp"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:src="@drawable/ic_nationality"
                     android:layout_toEndOf="@id/nationality_edit" />
             </RelativeLayout>
