--- a/app/src/main/res/layout/custom_toolbar_chat.xml
+++ b/app/src/main/res/layout/custom_toolbar_chat.xml
@@ -43,21 +43,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@id/guest_img"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="5dp"
                 android:text=""
-                android:textColor="@color/colorWhite" />
-            <TextView
-                android:id="@+id/user_status"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_alignParentEnd="true"
-                android:text=""
-                android:background="@drawable/status_background"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="5dp"/>
+                android:textColor="@color/colorWhite"/>
         </RelativeLayout>
 
 </androidx.appcompat.widget.Toolbar>
