--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,13 +11,13 @@
         android:id="@+id/empty_chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="          Empty Chat! \nSend Your First Message!"
+        android:text="@string/empty_chat"
         android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/colorWhite"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_messages"
         android:layout_margin="5dp"
@@ -68,7 +68,8 @@
             android:src="@drawable/ic_image_blue"
             android:clickable="true"
             android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"            android:onClick="sendImage" />
+            android:foreground="?android:attr/selectableItemBackground"
+            android:onClick="sendImage" />
         <EditText
             android:id="@+id/msg_input"
             android:layout_width="0dp"
@@ -78,7 +79,7 @@
             android:text=""
             android:maxLines="5"
             android:textCursorDrawable="@drawable/cursor_color"
-            android:backgroundTint="@color/colorBlue"
+            android:background="@drawable/edit_text_style_dark"
             android:inputType="textMultiLine"
             android:textColor="@color/colorWhite"
             android:textSize="17sp"
@@ -103,7 +104,7 @@
         android:layout_height="50dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:indeterminateDrawable="@drawable/custom_progress_bar_blue"
+        android:indeterminateDrawable="@drawable/custom_progress_bar_red"
         android:visibility="visible" />
 
 </RelativeLayout>
