--- a/app/src/main/res/layout/header_navigation.xml
+++ b/app/src/main/res/layout/header_navigation.xml
@@ -5,17 +5,17 @@
     android:layout_height="250dp"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/gradient_blue_white">
+    android:background="@drawable/gradient_background_signup">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@mipmap/ic_moh"/>
+        android:src="@mipmap/ic_weshare"/>
     <TextView
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorDark"
+        android:textColor="@color/colorWhite"
         android:text="@string/app_name"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
@@ -30,7 +30,7 @@
         android:gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorDark"
+        android:textColor="@color/colorWhite"
         android:text="Welcome, Hossam Alaa!"
         android:maxLines="1"
         android:textSize="17sp"
