--- a/app/src/main/res/layout/rv_item_conversaion.xml
+++ b/app/src/main/res/layout/rv_item_conversaion.xml
@@ -4,13 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
     android:clickable="true"
-    android:layout_margin="3dp"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardElevation="0dp"
     android:focusable="true"
-    app:cardBackgroundColor="@color/transparent_blue2">
+    app:cardBackgroundColor="@color/transparent_blue">
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -34,7 +32,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
@@ -52,7 +50,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:text="Hello, Dexter Morgan, I just like to meet you in person and talk about our next homicide in Miami, florida "
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="3dp"
             android:maxLines="2"
             android:textSize="16sp"
             android:textColor="@color/colorWhite3"/>
@@ -62,7 +60,7 @@
             android:layout_height="wrap_content"
             android:text="20-11-2020 At 18:40"
             android:textSize="11sp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="3dp"
             android:textColor="@color/colorWhite2"/>
 
     </LinearLayout>
